# mirror-bot

./: .gitignore  README.md  mirrorBOT  pyproject.toml  requirements.txt  requirements_dev.txt  setupvenv
cli/: bridge.py  commands.py  main.py
mirror_bot/: __init__.py  mirror_bot.py  utils.py
mirror_bot/cli/: bridge.py  commands.py  main.py
mirror_bot/controllers/: keyboard.py  main.py  mouse.py
mirror_bot/interpreters/: main.py  setence.py
mirror_bot/recorders/: mouse.py
mirrors/: _keep
src/: interpreter.py  keyboard_example.py  main.py  mouse_example.py  utils.py
src/controllers/: keyboard.py  main.py  mouse.py
src/interpreters/: keyboard.py  main.py  mouse.py  setence.py
src/listeners/: KeyboardListener.py
src/mirrors/: _keep
src/recorders/: KeyboardRecorder.py  keyboard.py  mouse.py
